// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge component rendering it should render according to theme: Badge Custom Theme 1`] = `
<div
  className="sc-bdVaJa jZyAsw"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize="0.75rem"
  fontWeight={400}
>
  Mock
</div>
`;

exports[`Badge component rendering it should render each color: Badge Colors 1`] = `
<div
  className="sc-bdVaJa fCrzmS"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize="0.75rem"
  fontWeight={400}
>
  Mock
</div>
`;

exports[`Badge component rendering it should render each color: Badge Colors 2`] = `
<div
  className="sc-bdVaJa eClvXr"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize="0.75rem"
  fontWeight={400}
>
  Mock
</div>
`;

exports[`Badge component rendering it should render each color: Badge Colors 3`] = `
<div
  className="sc-bdVaJa idCWQL"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize="0.75rem"
  fontWeight={400}
>
  Mock
</div>
`;

exports[`Badge component rendering it should render each color: Badge Colors 4`] = `
<div
  className="sc-bdVaJa htUQav"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize="0.75rem"
  fontWeight={400}
>
  Mock
</div>
`;

exports[`Badge component rendering it should render each color: Badge Colors 5`] = `
<div
  className="sc-bdVaJa eXtZkd"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize="0.75rem"
  fontWeight={400}
>
  Mock
</div>
`;

exports[`Badge component rendering it should render each color: Badge Colors 6`] = `
<div
  className="sc-bdVaJa kPVSd"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize="0.75rem"
  fontWeight={400}
>
  Mock
</div>
`;

exports[`Badge component rendering it should render each color: Badge Colors 7`] = `
<div
  className="sc-bdVaJa fStXwo"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize="0.75rem"
  fontWeight={400}
>
  Mock
</div>
`;

exports[`Badge component rendering it should render each color: Badge Colors 8`] = `
<div
  className="sc-bdVaJa bYYsMi"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize="0.75rem"
  fontWeight={400}
>
  Mock
</div>
`;

exports[`Badge component rendering it should render each type: Badge Types 1`] = `
<div
  className="sc-bdVaJa fCrzmS"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize="0.75rem"
  fontWeight={400}
>
  Mock
</div>
`;

exports[`Badge component rendering it should render the default color and default type: Badge Default Color And Type 1`] = `
<div
  className="sc-bdVaJa fCrzmS"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize="0.75rem"
  fontWeight={400}
>
  Mock
</div>
`;
